--- a/gstreamer/po/nb.po
+++ b/gstreamer/po/nb.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.14\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-02-13 15:55+0000\n"
+"POT-Creation-Date: 2009-04-15 22:25+0100\n"
 "PO-Revision-Date: 2007-11-02 15:43+0100\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian Bokmaal <i18n-nb@lister.ping.uio.no>\n"
@@ -449,6 +449,13 @@ msgstr "lydkodek"
 msgid "codec the audio data is stored in"
 msgstr ""
 
+#, fuzzy
+msgid "subtitle codec"
+msgstr "lydkodek"
+
+msgid "codec the subtitle data is stored in"
+msgstr ""
+
 msgid "bitrate"
 msgstr "bitrate"
 
@@ -802,8 +809,7 @@ msgstr ""
 msgid "ERROR: no toplevel pipeline element in file '%s'.\n"
 msgstr ""
 
-#, c-format
-msgid "WARNING: only one toplevel element is supported at this time."
+msgid "WARNING: only one toplevel element is supported at this time.\n"
 msgstr ""
 
 #, c-format
@@ -835,26 +841,25 @@ msgstr ""
 msgid "WARNING: from element %s: %s\n"
 msgstr "FEIL: fra element %s: %s\n"
 
-#, c-format
 msgid "Prerolled, waiting for buffering to finish...\n"
 msgstr ""
 
 msgid "buffering..."
 msgstr ""
 
-#, c-format
 msgid "Done buffering, setting pipeline to PLAYING ...\n"
 msgstr ""
 
-#, c-format
 msgid "Buffering, setting pipeline to PAUSED ...\n"
 msgstr ""
 
-#, c-format
 msgid "Redistribute latency...\n"
 msgstr ""
 
 #, c-format
+msgid "Setting state to %s as requested by %s...\n"
+msgstr ""
+
 msgid "Interrupt: Stopping pipeline ...\n"
 msgstr ""
 
@@ -862,6 +867,9 @@ msgid "Output tags (also known as metadata)"
 msgstr ""
 
 msgid "Output status information and property notifications"
+msgstr ""
+
+msgid "Do not print any progress information"
 msgstr ""
 
 msgid "Output messages"
@@ -885,11 +893,13 @@ msgstr ""
 msgid "Print alloc trace (if enabled at compile time)"
 msgstr ""
 
+msgid "Force EOS on sources before shutting the pipeline down"
+msgstr ""
+
 #, c-format
 msgid "ERROR: pipeline could not be constructed: %s.\n"
 msgstr ""
 
-#, c-format
 msgid "ERROR: pipeline could not be constructed.\n"
 msgstr ""
 
@@ -897,55 +907,56 @@ msgstr ""
 msgid "WARNING: erroneous pipeline: %s\n"
 msgstr ""
 
-#, c-format
 msgid "ERROR: the 'pipeline' element wasn't found.\n"
 msgstr ""
 
-#, c-format
 msgid "Setting pipeline to PAUSED ...\n"
 msgstr ""
 
-#, c-format
 msgid "ERROR: Pipeline doesn't want to pause.\n"
 msgstr ""
 
-#, c-format
 msgid "Pipeline is live and does not need PREROLL ...\n"
 msgstr ""
 
-#, c-format
 msgid "Pipeline is PREROLLING ...\n"
 msgstr ""
 
-#, c-format
 msgid "ERROR: pipeline doesn't want to preroll.\n"
 msgstr ""
 
-#, c-format
 msgid "Pipeline is PREROLLED ...\n"
 msgstr ""
 
-#, c-format
 msgid "Setting pipeline to PLAYING ...\n"
 msgstr ""
 
-#, c-format
 msgid "ERROR: pipeline doesn't want to play.\n"
+msgstr ""
+
+msgid "EOS on shutdown enabled -- Forcing EOS on the pipeline\n"
+msgstr ""
+
+msgid "Waiting for EOS...\n"
+msgstr ""
+
+msgid "EOS received - stopping pipeline...\n"
+msgstr ""
+
+msgid "An error happened while waiting for EOS\n"
 msgstr ""
 
 msgid "Execution ended after %"
 msgstr ""
 
-#, c-format
 msgid "Setting pipeline to READY ...\n"
 msgstr ""
 
-#, c-format
 msgid "Setting pipeline to NULL ...\n"
 msgstr ""
 
-#, c-format
-msgid "FREEING pipeline ...\n"
+#, fuzzy
+msgid "Freeing pipeline ...\n"
 msgstr "FRIGJØR rør...\n"
 
 #~ msgid "original location of file as a URI"
