--- a/gstreamer/po/zh_CN.po
+++ b/gstreamer/po/zh_CN.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.21.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-02-13 15:55+0000\n"
+"POT-Creation-Date: 2009-04-15 22:25+0100\n"
 "PO-Revision-Date: 2009-01-14 12:55+0800\n"
 "Last-Translator: Ji ZhengYu <zhengyuji@gmail.com>\n"
 "Language-Team: Chinese (simplified) <translation-team-zh-cn@lists."
@@ -440,6 +440,14 @@ msgstr "音频编码"
 msgid "codec the audio data is stored in"
 msgstr "音频数据以...编码存储"
 
+#, fuzzy
+msgid "subtitle codec"
+msgstr "视频编码"
+
+#, fuzzy
+msgid "codec the subtitle data is stored in"
+msgstr "视频数据以...编码存储"
+
 msgid "bitrate"
 msgstr "比特率"
 
@@ -798,8 +806,8 @@ msgstr "错误: xml 文件‘%s’解析失败。\n"
 msgid "ERROR: no toplevel pipeline element in file '%s'.\n"
 msgstr "错误: 文件‘%s’中没有顶级管道组件。\n"
 
-#, c-format
-msgid "WARNING: only one toplevel element is supported at this time."
+#, fuzzy
+msgid "WARNING: only one toplevel element is supported at this time.\n"
 msgstr "警告: 此时仅支持一个顶级组件。"
 
 #, c-format
@@ -833,26 +841,25 @@ msgstr ""
 msgid "WARNING: from element %s: %s\n"
 msgstr "警告：来自组件 %s：%s\n"
 
-#, c-format
 msgid "Prerolled, waiting for buffering to finish...\n"
 msgstr "Prerolled，等待缓冲完成...\n"
 
 msgid "buffering..."
 msgstr "正在缓冲..."
 
-#, c-format
 msgid "Done buffering, setting pipeline to PLAYING ...\n"
 msgstr "缓冲完成，设置播放管道 ...\n"
 
-#, c-format
 msgid "Buffering, setting pipeline to PAUSED ...\n"
 msgstr "正在缓冲，设置暂停管道 ...\n"
 
-#, c-format
 msgid "Redistribute latency...\n"
 msgstr "重新分配延迟时间...\n"
 
 #, c-format
+msgid "Setting state to %s as requested by %s...\n"
+msgstr ""
+
 msgid "Interrupt: Stopping pipeline ...\n"
 msgstr "中断: 中止管道 ...\n"
 
@@ -861,6 +868,10 @@ msgstr "输出标识(也可认为是元数据)"
 
 msgid "Output status information and property notifications"
 msgstr "输出状态信息和属性通告"
+
+#, fuzzy
+msgid "Do not print any progress information"
+msgstr "不输出类型的状态信息"
 
 msgid "Output messages"
 msgstr "输出信息"
@@ -883,11 +894,13 @@ msgstr "不安装错误的处理程序"
 msgid "Print alloc trace (if enabled at compile time)"
 msgstr "打印分配记录(如果在编译时开启的话)"
 
+msgid "Force EOS on sources before shutting the pipeline down"
+msgstr ""
+
 #, c-format
 msgid "ERROR: pipeline could not be constructed: %s.\n"
 msgstr "错误: 无法创建管道: %s。\n"
 
-#, c-format
 msgid "ERROR: pipeline could not be constructed.\n"
 msgstr "错误: 无法创建管道。\n"
 
@@ -895,56 +908,61 @@ msgstr "错误: 无法创建管道。\n"
 msgid "WARNING: erroneous pipeline: %s\n"
 msgstr "警告: 错误管道: %s\n"
 
-#, c-format
 msgid "ERROR: the 'pipeline' element wasn't found.\n"
 msgstr "错误: 未找到‘管道’组件。\n"
 
-#, c-format
 msgid "Setting pipeline to PAUSED ...\n"
 msgstr "设置暂停管道 ...\n"
 
-#, c-format
 msgid "ERROR: Pipeline doesn't want to pause.\n"
 msgstr "错误: 管道不想暂停。\n"
 
-#, c-format
 msgid "Pipeline is live and does not need PREROLL ...\n"
 msgstr "管道正在使用且不需要 PREROLL ...\n"
 
-#, c-format
 msgid "Pipeline is PREROLLING ...\n"
 msgstr "管道正在 PREROLLING ...\n"
 
-#, c-format
 msgid "ERROR: pipeline doesn't want to preroll.\n"
 msgstr "错误: 管道不需要 preroll.\n"
 
-#, c-format
 msgid "Pipeline is PREROLLED ...\n"
 msgstr "管道被 PREROLLED ...\n"
 
-#, c-format
 msgid "Setting pipeline to PLAYING ...\n"
 msgstr "设置播放管道 ...\n"
 
-#, c-format
 msgid "ERROR: pipeline doesn't want to play.\n"
 msgstr "错误: 管道不想播放。\n"
+
+msgid "EOS on shutdown enabled -- Forcing EOS on the pipeline\n"
+msgstr ""
+
+msgid "Waiting for EOS...\n"
+msgstr ""
+
+#, fuzzy
+msgid "EOS received - stopping pipeline...\n"
+msgstr "中断: 中止管道 ...\n"
+
+msgid "An error happened while waiting for EOS\n"
+msgstr ""
 
 msgid "Execution ended after %"
 msgstr "在 % 后运行终止"
 
-#, c-format
 msgid "Setting pipeline to READY ...\n"
 msgstr "设置备用管道 ...\n"
 
-#, c-format
 msgid "Setting pipeline to NULL ...\n"
 msgstr "设置 NULL 管道 ...\n"
 
-#, c-format
-msgid "FREEING pipeline ...\n"
-msgstr "正在释放管道 ...\n"
+#, fuzzy
+msgid "Freeing pipeline ...\n"
+msgstr "设置 NULL 管道 ...\n"
+
+#~ msgid "FREEING pipeline ...\n"
+#~ msgstr "正在释放管道 ...\n"
 
 #~ msgid "Got Message from element \"%s\" (%s): "
 #~ msgstr "从组件“%s”中获取信息(%s):"
