--- a/gstreamer/po/zh_TW.po
+++ b/gstreamer/po/zh_TW.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.8.8\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-02-13 15:55+0000\n"
+"POT-Creation-Date: 2009-04-15 22:25+0100\n"
 "PO-Revision-Date: 2005-04-27 14:55+0800\n"
 "Last-Translator: Abel Cheung <abelcheung@gmail.com>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
@@ -465,6 +465,14 @@ msgstr "音效編碼"
 msgid "codec the audio data is stored in"
 msgstr "音效"
 
+#, fuzzy
+msgid "subtitle codec"
+msgstr "視像編碼"
+
+#, fuzzy
+msgid "codec the subtitle data is stored in"
+msgstr "音效"
+
 msgid "bitrate"
 msgstr "位元率"
 
@@ -817,8 +825,7 @@ msgstr "錯誤：無法解析 XML 檔案 ‘%s’ 的內容。\n"
 msgid "ERROR: no toplevel pipeline element in file '%s'.\n"
 msgstr ""
 
-#, c-format
-msgid "WARNING: only one toplevel element is supported at this time."
+msgid "WARNING: only one toplevel element is supported at this time.\n"
 msgstr ""
 
 #, c-format
@@ -850,26 +857,25 @@ msgstr ""
 msgid "WARNING: from element %s: %s\n"
 msgstr "錯誤：來自 %s 元件：%s\n"
 
-#, c-format
 msgid "Prerolled, waiting for buffering to finish...\n"
 msgstr ""
 
 msgid "buffering..."
 msgstr ""
 
-#, c-format
 msgid "Done buffering, setting pipeline to PLAYING ...\n"
 msgstr ""
 
-#, c-format
 msgid "Buffering, setting pipeline to PAUSED ...\n"
 msgstr ""
 
-#, c-format
 msgid "Redistribute latency...\n"
 msgstr ""
 
 #, c-format
+msgid "Setting state to %s as requested by %s...\n"
+msgstr ""
+
 msgid "Interrupt: Stopping pipeline ...\n"
 msgstr ""
 
@@ -878,6 +884,10 @@ msgstr ""
 
 msgid "Output status information and property notifications"
 msgstr ""
+
+#, fuzzy
+msgid "Do not print any progress information"
+msgstr "不顯示和 TYPE 有關的狀態資訊"
 
 msgid "Output messages"
 msgstr ""
@@ -900,11 +910,13 @@ msgstr ""
 msgid "Print alloc trace (if enabled at compile time)"
 msgstr "印出 alloc 追蹤訊息 (如果編譯程式時有啟用這項功能)"
 
+msgid "Force EOS on sources before shutting the pipeline down"
+msgstr ""
+
 #, c-format
 msgid "ERROR: pipeline could not be constructed: %s.\n"
 msgstr "錯誤：無法製作管線：%s。\n"
 
-#, c-format
 msgid "ERROR: pipeline could not be constructed.\n"
 msgstr "錯誤：無法製作管線。\n"
 
@@ -912,55 +924,58 @@ msgstr "錯誤：無法製作管線。\n"
 msgid "WARNING: erroneous pipeline: %s\n"
 msgstr "警告：管線錯誤：%s\n"
 
-#, c-format
 msgid "ERROR: the 'pipeline' element wasn't found.\n"
 msgstr "錯誤：找不到 ‘pipeline’ 元件。\n"
 
-#, c-format
 msgid "Setting pipeline to PAUSED ...\n"
 msgstr ""
 
-#, fuzzy, c-format
+#, fuzzy
 msgid "ERROR: Pipeline doesn't want to pause.\n"
 msgstr "錯誤：管線無法執行。\n"
 
-#, c-format
 msgid "Pipeline is live and does not need PREROLL ...\n"
 msgstr ""
 
-#, c-format
 msgid "Pipeline is PREROLLING ...\n"
 msgstr ""
 
-#, fuzzy, c-format
+#, fuzzy
 msgid "ERROR: pipeline doesn't want to preroll.\n"
 msgstr "錯誤：管線無法執行。\n"
 
-#, c-format
 msgid "Pipeline is PREROLLED ...\n"
 msgstr ""
 
-#, c-format
 msgid "Setting pipeline to PLAYING ...\n"
 msgstr ""
 
-#, c-format
 msgid "ERROR: pipeline doesn't want to play.\n"
 msgstr "錯誤：管線無法執行。\n"
+
+msgid "EOS on shutdown enabled -- Forcing EOS on the pipeline\n"
+msgstr ""
+
+msgid "Waiting for EOS...\n"
+msgstr ""
+
+msgid "EOS received - stopping pipeline...\n"
+msgstr ""
+
+msgid "An error happened while waiting for EOS\n"
+msgstr ""
 
 msgid "Execution ended after %"
 msgstr ""
 
-#, c-format
 msgid "Setting pipeline to READY ...\n"
 msgstr ""
 
-#, c-format
 msgid "Setting pipeline to NULL ...\n"
 msgstr ""
 
-#, fuzzy, c-format
-msgid "FREEING pipeline ...\n"
+#, fuzzy
+msgid "Freeing pipeline ...\n"
 msgstr "執行管線 ...\n"
 
 #~ msgid "Disable accelerated CPU instructions"
