--- a/gstreamer/po/az.po
+++ b/gstreamer/po/az.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer-0.8.0\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-02-13 15:55+0000\n"
+"POT-Creation-Date: 2009-04-15 22:25+0100\n"
 "PO-Revision-Date: 2004-03-19 18:40+0200\n"
 "Last-Translator: Metin Amiroff <metin@karegen.com>\n"
 "Language-Team: Azerbaijani <translation-team-az@lists.sourceforge.net>\n"
@@ -440,6 +440,12 @@ msgstr ""
 msgid "codec the audio data is stored in"
 msgstr ""
 
+msgid "subtitle codec"
+msgstr ""
+
+msgid "codec the subtitle data is stored in"
+msgstr ""
+
 msgid "bitrate"
 msgstr ""
 
@@ -789,8 +795,7 @@ msgstr ""
 msgid "ERROR: no toplevel pipeline element in file '%s'.\n"
 msgstr ""
 
-#, c-format
-msgid "WARNING: only one toplevel element is supported at this time."
+msgid "WARNING: only one toplevel element is supported at this time.\n"
 msgstr ""
 
 #, c-format
@@ -822,26 +827,25 @@ msgstr ""
 msgid "WARNING: from element %s: %s\n"
 msgstr ""
 
-#, c-format
 msgid "Prerolled, waiting for buffering to finish...\n"
 msgstr ""
 
 msgid "buffering..."
 msgstr ""
 
-#, c-format
 msgid "Done buffering, setting pipeline to PLAYING ...\n"
 msgstr ""
 
-#, c-format
 msgid "Buffering, setting pipeline to PAUSED ...\n"
 msgstr ""
 
-#, c-format
 msgid "Redistribute latency...\n"
 msgstr ""
 
 #, c-format
+msgid "Setting state to %s as requested by %s...\n"
+msgstr ""
+
 msgid "Interrupt: Stopping pipeline ...\n"
 msgstr ""
 
@@ -849,6 +853,9 @@ msgid "Output tags (also known as metadata)"
 msgstr ""
 
 msgid "Output status information and property notifications"
+msgstr ""
+
+msgid "Do not print any progress information"
 msgstr ""
 
 msgid "Output messages"
@@ -872,11 +879,13 @@ msgstr ""
 msgid "Print alloc trace (if enabled at compile time)"
 msgstr ""
 
+msgid "Force EOS on sources before shutting the pipeline down"
+msgstr ""
+
 #, c-format
 msgid "ERROR: pipeline could not be constructed: %s.\n"
 msgstr ""
 
-#, c-format
 msgid "ERROR: pipeline could not be constructed.\n"
 msgstr ""
 
@@ -884,55 +893,55 @@ msgstr ""
 msgid "WARNING: erroneous pipeline: %s\n"
 msgstr ""
 
-#, c-format
 msgid "ERROR: the 'pipeline' element wasn't found.\n"
 msgstr ""
 
-#, c-format
 msgid "Setting pipeline to PAUSED ...\n"
 msgstr ""
 
-#, c-format
 msgid "ERROR: Pipeline doesn't want to pause.\n"
 msgstr ""
 
-#, c-format
 msgid "Pipeline is live and does not need PREROLL ...\n"
 msgstr ""
 
-#, c-format
 msgid "Pipeline is PREROLLING ...\n"
 msgstr ""
 
-#, c-format
 msgid "ERROR: pipeline doesn't want to preroll.\n"
 msgstr ""
 
-#, c-format
 msgid "Pipeline is PREROLLED ...\n"
 msgstr ""
 
-#, c-format
 msgid "Setting pipeline to PLAYING ...\n"
 msgstr ""
 
-#, c-format
 msgid "ERROR: pipeline doesn't want to play.\n"
+msgstr ""
+
+msgid "EOS on shutdown enabled -- Forcing EOS on the pipeline\n"
+msgstr ""
+
+msgid "Waiting for EOS...\n"
+msgstr ""
+
+msgid "EOS received - stopping pipeline...\n"
+msgstr ""
+
+msgid "An error happened while waiting for EOS\n"
 msgstr ""
 
 msgid "Execution ended after %"
 msgstr ""
 
-#, c-format
 msgid "Setting pipeline to READY ...\n"
 msgstr ""
 
-#, c-format
 msgid "Setting pipeline to NULL ...\n"
 msgstr ""
 
-#, c-format
-msgid "FREEING pipeline ...\n"
+msgid "Freeing pipeline ...\n"
 msgstr ""
 
 #~ msgid "')"
