--- a/gstreamer/po/cs.po
+++ b/gstreamer/po/cs.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.20.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-02-13 15:55+0000\n"
+"POT-Creation-Date: 2009-04-15 22:25+0100\n"
 "PO-Revision-Date: 2008-10-12 12:12+0200\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
@@ -450,6 +450,14 @@ msgstr "kodek zvuku"
 msgid "codec the audio data is stored in"
 msgstr "kodek, ve kterém jsou uložena data zvuku"
 
+#, fuzzy
+msgid "subtitle codec"
+msgstr "kodek videa"
+
+#, fuzzy
+msgid "codec the subtitle data is stored in"
+msgstr "kodek, ve kterém jsou uložena data videa"
+
 msgid "bitrate"
 msgstr "bitrate"
 
@@ -815,8 +823,8 @@ msgstr "CHYBA: zpracovávání xml souboru '%s' selhalo.\n"
 msgid "ERROR: no toplevel pipeline element in file '%s'.\n"
 msgstr "CHYBA: v souboru '%s' není element nejvyšší úrovně pipeline.\n"
 
-#, c-format
-msgid "WARNING: only one toplevel element is supported at this time."
+#, fuzzy
+msgid "WARNING: only one toplevel element is supported at this time.\n"
 msgstr ""
 "VAROVÁNÍ: v současné době je podporován jen jeden element nejvyšší úrovně."
 
@@ -851,7 +859,6 @@ msgstr ""
 msgid "WARNING: from element %s: %s\n"
 msgstr "VAROVÁNÍ: od elementu %s: %s\n"
 
-#, c-format
 msgid "Prerolled, waiting for buffering to finish...\n"
 msgstr "Předtočeno, čekám na dokončení ukládání do vyrovnávácí paměti...\n"
 
@@ -859,21 +866,21 @@ msgstr "Předtočeno, čekám na dokončení ukládání do vyrovnávácí pamě
 msgid "buffering..."
 msgstr "ukládám do vyrovnávací paměti... %d  \n"
 
-#, c-format
 msgid "Done buffering, setting pipeline to PLAYING ...\n"
 msgstr ""
 "Ukládání do vyrovnávací paměti hotovo, nastavuji rouru na PŘEHRÁVÁ ...\n"
 
-#, c-format
 msgid "Buffering, setting pipeline to PAUSED ...\n"
 msgstr ""
 "Ukládám do vyrovnávací paměti hotovo, nastavuji rouru na POZASTAVENA ...\n"
 
-#, c-format
 msgid "Redistribute latency...\n"
 msgstr ""
 
 #, c-format
+msgid "Setting state to %s as requested by %s...\n"
+msgstr ""
+
 msgid "Interrupt: Stopping pipeline ...\n"
 msgstr "Přerušení: Zastavuji rouru ...\n"
 
@@ -882,6 +889,10 @@ msgstr "Vypsat tagy (také známé jako metadata)"
 
 msgid "Output status information and property notifications"
 msgstr "Vypsat informace o stavu a upozornění na vlastnosti"
+
+#, fuzzy
+msgid "Do not print any progress information"
+msgstr "Nevypisovat informace o stavu s TYPEM"
 
 msgid "Output messages"
 msgstr "Zprávy výstupu"
@@ -904,11 +915,13 @@ msgstr "Neinstalovat obsluhu výjimek"
 msgid "Print alloc trace (if enabled at compile time)"
 msgstr "Vypisovat stopu alokace (je-li povoleno při kompilaci)"
 
+msgid "Force EOS on sources before shutting the pipeline down"
+msgstr ""
+
 #, c-format
 msgid "ERROR: pipeline could not be constructed: %s.\n"
 msgstr "CHYBA: nelze vytvořit rouru: %s.\n"
 
-#, c-format
 msgid "ERROR: pipeline could not be constructed.\n"
 msgstr "CHYBA: nelze vytvořit rouru.\n"
 
@@ -916,62 +929,67 @@ msgstr "CHYBA: nelze vytvořit rouru.\n"
 msgid "WARNING: erroneous pipeline: %s\n"
 msgstr "VAROVÁNÍ: chybná roura: %s\n"
 
-#, c-format
 msgid "ERROR: the 'pipeline' element wasn't found.\n"
 msgstr "CHYBA: element 'pipeline' nebyl nalezen.\n"
 
-#, c-format
 msgid "Setting pipeline to PAUSED ...\n"
 msgstr "Nastavuji rouru na POZASTAVENA ...\n"
 
 # On strike?
-#, c-format
 msgid "ERROR: Pipeline doesn't want to pause.\n"
 msgstr "CHYBA: Roura nechce pozastavit.\n"
 
-#, c-format
 msgid "Pipeline is live and does not need PREROLL ...\n"
 msgstr "Roura žije a nepotřebuje PŘEDTOČENÍ ...\n"
 
-#, c-format
 msgid "Pipeline is PREROLLING ...\n"
 msgstr "Roura se PŘEDTÁČÍ ...\n"
 
 # On strike?
-#, c-format
 msgid "ERROR: pipeline doesn't want to preroll.\n"
 msgstr "CHYBA: roura nechce předtáčet.\n"
 
-#, c-format
 msgid "Pipeline is PREROLLED ...\n"
 msgstr "Roura je PŘEDTOČENA ...\n"
 
-#, c-format
 msgid "Setting pipeline to PLAYING ...\n"
 msgstr "Nastavuji rouro na PŘEHRÁVÁ ...\n"
 
 # On strike?
-#, c-format
 msgid "ERROR: pipeline doesn't want to play.\n"
 msgstr "CHYBA: roura nechce hrát.\n"
+
+msgid "EOS on shutdown enabled -- Forcing EOS on the pipeline\n"
+msgstr ""
+
+msgid "Waiting for EOS...\n"
+msgstr ""
+
+#, fuzzy
+msgid "EOS received - stopping pipeline...\n"
+msgstr "Přerušení: Zastavuji rouru ...\n"
+
+msgid "An error happened while waiting for EOS\n"
+msgstr ""
 
 msgid "Execution ended after %"
 msgstr "Provádění skončilo po %"
 
-#, c-format
 msgid "Setting pipeline to READY ...\n"
 msgstr "Nastavuji rouru na PŘIPRAVENA ...\n"
 
-#, c-format
 msgid "Setting pipeline to NULL ...\n"
 msgstr "Nastavuji rouru na NULL ...\n"
 
-#, c-format
-msgid "FREEING pipeline ...\n"
-msgstr "UVOLŇUJI rouru ...\n"
+#, fuzzy
+msgid "Freeing pipeline ...\n"
+msgstr "Nastavuji rouru na NULL ...\n"
 
 #~ msgid "Got Message from element \"%s\" (%s): "
 #~ msgstr "Dostal jsem zprávu elementu \"%s\" (%s): "
+
+#~ msgid "FREEING pipeline ...\n"
+#~ msgstr "UVOLŇUJI rouru ...\n"
 
 #~ msgid "original location of file as a URI"
 #~ msgstr "původní umístění souboru jako URI"
