--- a/gstreamer/po/fi.po
+++ b/gstreamer/po/fi.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.21.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-02-13 15:55+0000\n"
+"POT-Creation-Date: 2009-04-15 22:25+0100\n"
 "PO-Revision-Date: 2009-01-18 15:50+0200\n"
 "Last-Translator: Tommi Vainikainen <Tommi.Vainikainen@iki.fi>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
@@ -459,6 +459,14 @@ msgstr "äänikoodekki"
 msgid "codec the audio data is stored in"
 msgstr "koodekki, jolla äänidata on tallennettu"
 
+#, fuzzy
+msgid "subtitle codec"
+msgstr "videokoodekki"
+
+#, fuzzy
+msgid "codec the subtitle data is stored in"
+msgstr "koodekki, jolla videodata on tallennettu"
+
 msgid "bitrate"
 msgstr "bittinopeus"
 
@@ -827,8 +835,8 @@ msgstr "VIRHE: XML-tiedoston \"%s\" jäsentäminen epäonnistui.\n"
 msgid "ERROR: no toplevel pipeline element in file '%s'.\n"
 msgstr "VIRHE: päätason liukuhihnaelementtiä ei ole tiedostossa \"%s\".\n"
 
-#, c-format
-msgid "WARNING: only one toplevel element is supported at this time."
+#, fuzzy
+msgid "WARNING: only one toplevel element is supported at this time.\n"
 msgstr "VAROITUS: vain yhtä päätason elementtiä tuetaan tällä kertaa."
 
 #, c-format
@@ -862,26 +870,25 @@ msgstr ""
 msgid "WARNING: from element %s: %s\n"
 msgstr "VAROITUS: elementiltä %s: %s\n"
 
-#, c-format
 msgid "Prerolled, waiting for buffering to finish...\n"
 msgstr "Esipyöritetty, odotetaan puskuroinnin päättymistä...\n"
 
 msgid "buffering..."
 msgstr "puskuroidaan..."
 
-#, c-format
 msgid "Done buffering, setting pipeline to PLAYING ...\n"
 msgstr "Puskurointi tehty, asetetaan liukuhihna tilaan SOI...\n"
 
-#, c-format
 msgid "Buffering, setting pipeline to PAUSED ...\n"
 msgstr "Puskuroidaan, asetetaan liukuhihna tilaan TAUOLLA...\n"
 
-#, c-format
 msgid "Redistribute latency...\n"
 msgstr "Uudelleenjaa latenssi...\n"
 
 #, c-format
+msgid "Setting state to %s as requested by %s...\n"
+msgstr ""
+
 msgid "Interrupt: Stopping pipeline ...\n"
 msgstr "Keskeytys: Pysäytetään liukuhihna ...\n"
 
@@ -890,6 +897,10 @@ msgstr "Tulostemerkinnät (tunnetaan myös metadatana)"
 
 msgid "Output status information and property notifications"
 msgstr "Tulostetilatiedot ja ominaisuushuomiot"
+
+#, fuzzy
+msgid "Do not print any progress information"
+msgstr "Älä tulosta tilatietoa TYYPPI"
 
 msgid "Output messages"
 msgstr "Tulosteviestit"
@@ -912,11 +923,13 @@ msgstr "Älä asenna virheenkäsittelintä"
 msgid "Print alloc trace (if enabled at compile time)"
 msgstr "Tulosta varausjälki (jos valittu käännöksen yhteydessä)"
 
+msgid "Force EOS on sources before shutting the pipeline down"
+msgstr ""
+
 #, c-format
 msgid "ERROR: pipeline could not be constructed: %s.\n"
 msgstr "VIRHE: liukuhihnaa ei voitu rakentaa: %s.\n"
 
-#, c-format
 msgid "ERROR: pipeline could not be constructed.\n"
 msgstr "VIRHE: liukuhihnaa ei voitu rakentaa.\n"
 
@@ -924,56 +937,61 @@ msgstr "VIRHE: liukuhihnaa ei voitu rakentaa.\n"
 msgid "WARNING: erroneous pipeline: %s\n"
 msgstr "VAROITUS: virheellinen liukuhihna: %s\n"
 
-#, c-format
 msgid "ERROR: the 'pipeline' element wasn't found.\n"
 msgstr "VIRHE: \"liukuhihna\"-elementtiä ei löytynyt.\n"
 
-#, c-format
 msgid "Setting pipeline to PAUSED ...\n"
 msgstr "Asetetaan liukuhihna tilaan TAUOLLA...\n"
 
-#, c-format
 msgid "ERROR: Pipeline doesn't want to pause.\n"
 msgstr "VIRHE: Liukuhihna ei halua mennä tauolle.\n"
 
-#, c-format
 msgid "Pipeline is live and does not need PREROLL ...\n"
 msgstr "Liukuhihna on käynnissä eikä sitä tarvitse ESIRULLATA...\n"
 
-#, c-format
 msgid "Pipeline is PREROLLING ...\n"
 msgstr "Liukuhihna ESIRULLAUTUU...\n"
 
-#, c-format
 msgid "ERROR: pipeline doesn't want to preroll.\n"
 msgstr "VIRHE: Liukuhihna ei halua esirullautua.\n"
 
-#, c-format
 msgid "Pipeline is PREROLLED ...\n"
 msgstr "Liukuhihna on ESIRULLATTU...\n"
 
-#, c-format
 msgid "Setting pipeline to PLAYING ...\n"
 msgstr "Asetetaan liukuhihna tilaan SOI...\n"
 
-#, c-format
 msgid "ERROR: pipeline doesn't want to play.\n"
 msgstr "VIRHE: Liukuhihna ei halua toistaa.\n"
+
+msgid "EOS on shutdown enabled -- Forcing EOS on the pipeline\n"
+msgstr ""
+
+msgid "Waiting for EOS...\n"
+msgstr ""
+
+#, fuzzy
+msgid "EOS received - stopping pipeline...\n"
+msgstr "Keskeytys: Pysäytetään liukuhihna ...\n"
+
+msgid "An error happened while waiting for EOS\n"
+msgstr ""
 
 msgid "Execution ended after %"
 msgstr "Suoritus päättyi jälkeen %"
 
-#, c-format
 msgid "Setting pipeline to READY ...\n"
 msgstr "Asetetaan liukuhihna tilaan VALMIS...\n"
 
-#, c-format
 msgid "Setting pipeline to NULL ...\n"
 msgstr "Asetetaan liukuhihna tilaan TYHJÄ...\n"
 
-#, c-format
-msgid "FREEING pipeline ...\n"
-msgstr "VAPAUTETAAN liukuhihna...\n"
+#, fuzzy
+msgid "Freeing pipeline ...\n"
+msgstr "Asetetaan liukuhihna tilaan TYHJÄ...\n"
+
+#~ msgid "FREEING pipeline ...\n"
+#~ msgstr "VAPAUTETAAN liukuhihna...\n"
 
 #~ msgid "Got Message from element \"%s\" (%s): "
 #~ msgstr "Saatiin Viesti elementiltä \"%s\" (%s): "
