--- a/gstreamer/po/hu.po
+++ b/gstreamer/po/hu.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.20.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-02-13 15:55+0000\n"
+"POT-Creation-Date: 2009-04-15 22:25+0100\n"
 "PO-Revision-Date: 2008-09-25 01:50+0100\n"
 "Last-Translator: Gabor Kelemen <kelemeng@gnome.hu>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
@@ -455,6 +455,14 @@ msgstr "hangkodek"
 msgid "codec the audio data is stored in"
 msgstr "a hangadatok tárolására használt kodek"
 
+#, fuzzy
+msgid "subtitle codec"
+msgstr "videokodek"
+
+#, fuzzy
+msgid "codec the subtitle data is stored in"
+msgstr "a videoadatok tárolására használt kodek"
+
 msgid "bitrate"
 msgstr "bitsebesség"
 
@@ -821,8 +829,8 @@ msgid "ERROR: no toplevel pipeline element in file '%s'.\n"
 msgstr ""
 "HIBA: nincs felső szintű adatcsatorna elem a következő fájlban: \"%s\".\n"
 
-#, c-format
-msgid "WARNING: only one toplevel element is supported at this time."
+#, fuzzy
+msgid "WARNING: only one toplevel element is supported at this time.\n"
 msgstr "FIGYELMEZTETÉS: egyszerre csak egy felső szintű elem támogatott."
 
 #, c-format
@@ -856,7 +864,6 @@ msgstr ""
 msgid "WARNING: from element %s: %s\n"
 msgstr "FIGYELMEZTETÉS: a következő elemtől: %s: %s\n"
 
-#, c-format
 msgid "Prerolled, waiting for buffering to finish...\n"
 msgstr "Előzetesen betöltve, várakozás a pufferelés befejeződésére...\n"
 
@@ -864,19 +871,19 @@ msgstr "Előzetesen betöltve, várakozás a pufferelés befejeződésére...\n"
 msgid "buffering..."
 msgstr "pufferelés... %d  \n"
 
-#, c-format
 msgid "Done buffering, setting pipeline to PLAYING ...\n"
 msgstr "A pufferelés kész, adatcsatorna beállítása LEJÁTSZÁSRA...\n"
 
-#, c-format
 msgid "Buffering, setting pipeline to PAUSED ...\n"
 msgstr "Pufferelés, az adatcsatorna beállítása SZÜNETELTETETT állapotúra...\n"
 
-#, c-format
 msgid "Redistribute latency...\n"
 msgstr ""
 
 #, c-format
+msgid "Setting state to %s as requested by %s...\n"
+msgstr ""
+
 msgid "Interrupt: Stopping pipeline ...\n"
 msgstr "Megszakítás: Adatcsatorna leállítása ...\n"
 
@@ -885,6 +892,10 @@ msgstr "Kimeneti címkék (metaadatok)"
 
 msgid "Output status information and property notifications"
 msgstr "Kimeneti állapotinformációk és tulajdonság-értesítések"
+
+#, fuzzy
+msgid "Do not print any progress information"
+msgstr "Ne írjon ki a TÍPUS típus állapotinformációit"
 
 msgid "Output messages"
 msgstr "Kimeneti üzenetek"
@@ -907,11 +918,13 @@ msgstr "Ne telepítsen hibakezelőt"
 msgid "Print alloc trace (if enabled at compile time)"
 msgstr "Foglalási nyomkövetés nyomtatása (ha fordításkor engedélyezték)"
 
+msgid "Force EOS on sources before shutting the pipeline down"
+msgstr ""
+
 #, c-format
 msgid "ERROR: pipeline could not be constructed: %s.\n"
 msgstr "HIBA: az adatcsatorna nem építhető fel: %s.\n"
 
-#, c-format
 msgid "ERROR: pipeline could not be constructed.\n"
 msgstr "HIBA: az adatcsatorna nem építhető fel.\n"
 
@@ -919,59 +932,64 @@ msgstr "HIBA: az adatcsatorna nem építhető fel.\n"
 msgid "WARNING: erroneous pipeline: %s\n"
 msgstr "FIGYELMEZTETÉS: hibás adatcsatorna: %s\n"
 
-#, c-format
 msgid "ERROR: the 'pipeline' element wasn't found.\n"
 msgstr "HIBA: az \"adatcsatorna\" elem nem található.\n"
 
-#, c-format
 msgid "Setting pipeline to PAUSED ...\n"
 msgstr "Adatcsatorna beállítása SZÜNETELTETETT állapotúra...\n"
 
-#, c-format
 msgid "ERROR: Pipeline doesn't want to pause.\n"
 msgstr "HIBA: az adatcsatorna nem akar megállni.\n"
 
-#, c-format
 msgid "Pipeline is live and does not need PREROLL ...\n"
 msgstr "Az adatcsatorna él és nem szükséges ELINDÍTANI...\n"
 
-#, c-format
 msgid "Pipeline is PREROLLING ...\n"
 msgstr "Az adatcsatorna INDÍTÁSA...\n"
 
-#, c-format
 msgid "ERROR: pipeline doesn't want to preroll.\n"
 msgstr "HIBA: az adatcsatorna nem akar elindulni.\n"
 
-#, c-format
 msgid "Pipeline is PREROLLED ...\n"
 msgstr "Az adatcsatorna ELINDÍTVA...\n"
 
-#, c-format
 msgid "Setting pipeline to PLAYING ...\n"
 msgstr "Adatcsatorna beállítása LEJÁTSZÁSRA...\n"
 
-#, c-format
 msgid "ERROR: pipeline doesn't want to play.\n"
 msgstr "HIBA: az adatcsatorna nem akar lejátszani.\n"
+
+msgid "EOS on shutdown enabled -- Forcing EOS on the pipeline\n"
+msgstr ""
+
+msgid "Waiting for EOS...\n"
+msgstr ""
+
+#, fuzzy
+msgid "EOS received - stopping pipeline...\n"
+msgstr "Megszakítás: Adatcsatorna leállítása ...\n"
+
+msgid "An error happened while waiting for EOS\n"
+msgstr ""
 
 msgid "Execution ended after %"
 msgstr "A végrehajtás befejeződött %"
 
-#, c-format
 msgid "Setting pipeline to READY ...\n"
 msgstr "Az adatcsatorna beállítása KÉSZ állapotra...\n"
 
-#, c-format
 msgid "Setting pipeline to NULL ...\n"
 msgstr "Az adatcsatorna beállítása NULL értékre...\n"
 
-#, c-format
-msgid "FREEING pipeline ...\n"
-msgstr "Az adatcsatorna FELSZABADÍTÁSA...\n"
+#, fuzzy
+msgid "Freeing pipeline ...\n"
+msgstr "Az adatcsatorna beállítása NULL értékre...\n"
 
 #~ msgid "Got Message from element \"%s\" (%s): "
 #~ msgstr "Üzenet érkezett a(z) \"%s\" (%s) elemtől: "
+
+#~ msgid "FREEING pipeline ...\n"
+#~ msgstr "Az adatcsatorna FELSZABADÍTÁSA...\n"
 
 #~ msgid "original location of file as a URI"
 #~ msgstr "a fájl eredeti helye URI címként"
