--- a/gstreamer/po/it.po
+++ b/gstreamer/po/it.po
@@ -108,7 +108,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.21.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-02-13 15:55+0000\n"
+"POT-Creation-Date: 2009-04-15 22:25+0100\n"
 "PO-Revision-Date: 2009-01-13 11:10+0100\n"
 "Last-Translator: Luca Ferretti <elle.uca@infinito.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
@@ -578,6 +578,14 @@ msgstr "codec audio"
 msgid "codec the audio data is stored in"
 msgstr "il codec con cui i dati audio sono memorizzati"
 
+#, fuzzy
+msgid "subtitle codec"
+msgstr "codec video"
+
+#, fuzzy
+msgid "codec the subtitle data is stored in"
+msgstr "il codec con cui i dati video sono memorizzati"
+
 msgid "bitrate"
 msgstr "bitrate"
 
@@ -968,8 +976,8 @@ msgstr "ERRORE: analisi del file xml «%s» non riuscita.\n"
 msgid "ERROR: no toplevel pipeline element in file '%s'.\n"
 msgstr "ERRORE: nessun elemento pipeline toplevel nel file «%s».\n"
 
-#, c-format
-msgid "WARNING: only one toplevel element is supported at this time."
+#, fuzzy
+msgid "WARNING: only one toplevel element is supported at this time.\n"
 msgstr "ATTENZIONE: al momento è supportato sono un elemento toplevel."
 
 #, c-format
@@ -1004,27 +1012,26 @@ msgstr ""
 msgid "WARNING: from element %s: %s\n"
 msgstr "ATTENZIONE: dall'elemento %s: %s\n"
 
-#, c-format
 msgid "Prerolled, waiting for buffering to finish...\n"
 msgstr "Preroll eseguito, in attesa del riempimento buffer per completare...\n"
 
 msgid "buffering..."
 msgstr "riempimento buffer..."
 
-#, c-format
 msgid "Done buffering, setting pipeline to PLAYING ...\n"
 msgstr ""
 "Riempimento buffer completato, impostazione della pipeline a PLAYING ...\n"
 
-#, c-format
 msgid "Buffering, setting pipeline to PAUSED ...\n"
 msgstr "Riempimento buffer, impostazione della pipeline a PAUSED ...\n"
 
-#, c-format
 msgid "Redistribute latency...\n"
 msgstr "Ridistribuzione latenza...\n"
 
 #, c-format
+msgid "Setting state to %s as requested by %s...\n"
+msgstr ""
+
 msgid "Interrupt: Stopping pipeline ...\n"
 msgstr "Interrotto: arresto della pipeline ...\n"
 
@@ -1035,6 +1042,11 @@ msgstr "Stampa i tag (anche noti come metadati)"
 # -v, --verbose
 msgid "Output status information and property notifications"
 msgstr "Stampa informazioni di stato e notifiche delle proprietà"
+
+# -X, --exclude=TIPO1,TIPO2,...
+#, fuzzy
+msgid "Do not print any progress information"
+msgstr "Non stampa le informazioni di stato per TIPO"
 
 # -m, --messages
 msgid "Output messages"
@@ -1062,11 +1074,13 @@ msgstr "Non installa un gestore di fault"
 msgid "Print alloc trace (if enabled at compile time)"
 msgstr "Stampa traccia di alloc (se abilitato in compilazione)"
 
+msgid "Force EOS on sources before shutting the pipeline down"
+msgstr ""
+
 #, c-format
 msgid "ERROR: pipeline could not be constructed: %s.\n"
 msgstr "ERRORE: impossibile costruire la pipeline: %s.\n"
 
-#, c-format
 msgid "ERROR: pipeline could not be constructed.\n"
 msgstr "ERRORE: impossibile costruire la pipeline.\n"
 
@@ -1074,44 +1088,48 @@ msgstr "ERRORE: impossibile costruire la pipeline.\n"
 msgid "WARNING: erroneous pipeline: %s\n"
 msgstr "ATTENZIONE: pipeline errata: %s.\n"
 
-#, c-format
 msgid "ERROR: the 'pipeline' element wasn't found.\n"
 msgstr "ERRORE: l'elemento «pipeline» non è stato trovato.\n"
 
-#, c-format
 msgid "Setting pipeline to PAUSED ...\n"
 msgstr "Impostazione della pipeline a PAUSED ...\n"
 
-#, c-format
 msgid "ERROR: Pipeline doesn't want to pause.\n"
 msgstr "ERRORE: la pipeline non vuole mettersi in pausa.\n"
 
 # Sinks are special elements in GStreamer. This is because sink elements have to take care of preroll, which is the process that takes care that elements going into the GST_STATE_PAUSED state will have buffers ready after the state change. The result of this is that such elements can start processing data immediately after going into the GST_STATE_PLAYING state, without requiring to take some time to initialize outputs or set up decoders; all that is done already before the state-change to GST_STATE_PAUSED  successfully completes.
 #
 # Preroll, however, is a complex process that would require the same code in many elements. Therefore, sink elements can derive from the GstBaseSink base-class, which does preroll and a few other utility functions automatically. The derived class only needs to implement a bunch of virtual functions and will work automatically.
-#, c-format
 msgid "Pipeline is live and does not need PREROLL ...\n"
 msgstr "La pipeline è viva e non necessita il PREROLL ...\n"
 
-#, c-format
 msgid "Pipeline is PREROLLING ...\n"
 msgstr "La pipeline è in PREROLLING ...\n"
 
-#, c-format
 msgid "ERROR: pipeline doesn't want to preroll.\n"
 msgstr "ERRORE: la pipeline non vuole fare il preroll.\n"
 
-#, c-format
 msgid "Pipeline is PREROLLED ...\n"
 msgstr "La pipeline è in PREROLLED ...\n"
 
-#, c-format
 msgid "Setting pipeline to PLAYING ...\n"
 msgstr "Impostazione della pipeline a PLAYING ...\n"
 
-#, c-format
 msgid "ERROR: pipeline doesn't want to play.\n"
 msgstr "ERRORE: la pipeline non vuole riprodurre.\n"
+
+msgid "EOS on shutdown enabled -- Forcing EOS on the pipeline\n"
+msgstr ""
+
+msgid "Waiting for EOS...\n"
+msgstr ""
+
+#, fuzzy
+msgid "EOS received - stopping pipeline...\n"
+msgstr "Interrotto: arresto della pipeline ...\n"
+
+msgid "An error happened while waiting for EOS\n"
+msgstr ""
 
 # secondo me quel % è un errore... magari dovrebbe
 # essere %d o %s, a meno che non costruscano il messagio
@@ -1119,14 +1137,15 @@ msgstr "ERRORE: la pipeline non vuole riprodurre.\n"
 msgid "Execution ended after %"
 msgstr "Esecuzione terminata dopo %"
 
-#, c-format
 msgid "Setting pipeline to READY ...\n"
 msgstr "Impostazione della pipeline a READY ...\n"
 
-#, c-format
 msgid "Setting pipeline to NULL ...\n"
 msgstr "Impostazione della pipeline a NULL ...\n"
 
-#, c-format
-msgid "FREEING pipeline ...\n"
-msgstr "Esecuzione FREE su pipeline ...\n"
+#, fuzzy
+msgid "Freeing pipeline ...\n"
+msgstr "Impostazione della pipeline a NULL ...\n"
+
+#~ msgid "FREEING pipeline ...\n"
+#~ msgstr "Esecuzione FREE su pipeline ...\n"
