--- a/gstreamer/po/ja.po
+++ b/gstreamer/po/ja.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.20.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-02-13 15:55+0000\n"
+"POT-Creation-Date: 2009-04-15 22:25+0100\n"
 "PO-Revision-Date: 2008-10-16 19:57+0900\n"
 "Last-Translator: Makoto Kato <makoto.kt@gmail.com>\n"
 "Language-Team: Japanese <translation-team-ja@lists.sourceforge.net>\n"
@@ -442,6 +442,13 @@ msgstr "音声コーデック"
 msgid "codec the audio data is stored in"
 msgstr ""
 
+#, fuzzy
+msgid "subtitle codec"
+msgstr "動画コーデック"
+
+msgid "codec the subtitle data is stored in"
+msgstr ""
+
 msgid "bitrate"
 msgstr "ビットレート"
 
@@ -792,8 +799,8 @@ msgid "ERROR: no toplevel pipeline element in file '%s'.\n"
 msgstr ""
 "エラー: ファイル '%s' にトップレベルのパイプラインエレメントがありません\n"
 
-#, c-format
-msgid "WARNING: only one toplevel element is supported at this time."
+#, fuzzy
+msgid "WARNING: only one toplevel element is supported at this time.\n"
 msgstr "警告: トップレベルのエレメントは一つのみサポートしています"
 
 #, c-format
@@ -827,7 +834,6 @@ msgstr ""
 msgid "WARNING: from element %s: %s\n"
 msgstr ""
 
-#, c-format
 msgid "Prerolled, waiting for buffering to finish...\n"
 msgstr ""
 
@@ -835,21 +841,21 @@ msgstr ""
 msgid "buffering..."
 msgstr "バッファリング中... %d  \n"
 
-#, c-format
 msgid "Done buffering, setting pipeline to PLAYING ...\n"
 msgstr ""
 "バッファリングが完了しましたので、パイプラインを再生中 (PLAYING) にしま"
 "す...\n"
 
-#, c-format
 msgid "Buffering, setting pipeline to PAUSED ...\n"
 msgstr "バッファリング中なので、パイプラインを一時停止 (PAUSED) にします...\n"
 
-#, c-format
 msgid "Redistribute latency...\n"
 msgstr ""
 
 #, c-format
+msgid "Setting state to %s as requested by %s...\n"
+msgstr ""
+
 msgid "Interrupt: Stopping pipeline ...\n"
 msgstr "割り込み: パイプラインを停止しています...\n"
 
@@ -858,6 +864,10 @@ msgstr "タグ (メタデータ) を出力する"
 
 msgid "Output status information and property notifications"
 msgstr ""
+
+#, fuzzy
+msgid "Do not print any progress information"
+msgstr "TYPE のステータス情報を出力しない"
 
 msgid "Output messages"
 msgstr "出力メッセージ"
@@ -880,11 +890,13 @@ msgstr "フォールトハンドラをインストールしない"
 msgid "Print alloc trace (if enabled at compile time)"
 msgstr "alloc トレースを表示する (コンパイル時に有効にする必要があります)"
 
+msgid "Force EOS on sources before shutting the pipeline down"
+msgstr ""
+
 #, c-format
 msgid "ERROR: pipeline could not be constructed: %s.\n"
 msgstr "エラー: パイプラインを構築することができません: %s\n"
 
-#, c-format
 msgid "ERROR: pipeline could not be constructed.\n"
 msgstr "エラー: パイプラインを構築することができません\n"
 
@@ -892,53 +904,55 @@ msgstr "エラー: パイプラインを構築することができません\n"
 msgid "WARNING: erroneous pipeline: %s\n"
 msgstr ""
 
-#, c-format
 msgid "ERROR: the 'pipeline' element wasn't found.\n"
 msgstr "エラー: 'pipeline' エレメントが見つかりませんでした\n"
 
-#, c-format
 msgid "Setting pipeline to PAUSED ...\n"
 msgstr "パイプラインを一時停止 (PAUSED) にしています...\n"
 
-#, c-format
 msgid "ERROR: Pipeline doesn't want to pause.\n"
 msgstr ""
 
-#, c-format
 msgid "Pipeline is live and does not need PREROLL ...\n"
 msgstr ""
 
-#, c-format
 msgid "Pipeline is PREROLLING ...\n"
 msgstr ""
 
-#, c-format
 msgid "ERROR: pipeline doesn't want to preroll.\n"
 msgstr ""
 
-#, c-format
 msgid "Pipeline is PREROLLED ...\n"
 msgstr ""
 
-#, c-format
 msgid "Setting pipeline to PLAYING ...\n"
 msgstr "パイプラインを再生中 (PLAYING) にしています...\n"
 
-#, c-format
 msgid "ERROR: pipeline doesn't want to play.\n"
+msgstr ""
+
+msgid "EOS on shutdown enabled -- Forcing EOS on the pipeline\n"
+msgstr ""
+
+msgid "Waiting for EOS...\n"
+msgstr ""
+
+#, fuzzy
+msgid "EOS received - stopping pipeline...\n"
+msgstr "割り込み: パイプラインを停止しています...\n"
+
+msgid "An error happened while waiting for EOS\n"
 msgstr ""
 
 msgid "Execution ended after %"
 msgstr ""
 
-#, c-format
 msgid "Setting pipeline to READY ...\n"
 msgstr ""
 
-#, c-format
 msgid "Setting pipeline to NULL ...\n"
 msgstr ""
 
-#, c-format
-msgid "FREEING pipeline ...\n"
+#, fuzzy
+msgid "Freeing pipeline ...\n"
 msgstr "パイプラインを解放 (FREEING) しています...\n"
