--- a/gstreamer/po/tr.po
+++ b/gstreamer/po/tr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.8.0\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-02-13 15:55+0000\n"
+"POT-Creation-Date: 2009-04-15 22:25+0100\n"
 "PO-Revision-Date: 2004-04-03 03:14+0300\n"
 "Last-Translator: Baris Cicek <baris@teamforce.name.tr>\n"
 "Language-Team: Turkish <gnu-tr-u12a@lists.sourceforge.net>\n"
@@ -475,6 +475,14 @@ msgstr "ses kodeki"
 msgid "codec the audio data is stored in"
 msgstr "ses verisinin saklandığı kodek"
 
+#, fuzzy
+msgid "subtitle codec"
+msgstr "video kodeki"
+
+#, fuzzy
+msgid "codec the subtitle data is stored in"
+msgstr "videonun saklandığı kodek"
+
 msgid "bitrate"
 msgstr "örnekleme hızı"
 
@@ -833,8 +841,8 @@ msgstr "HATA: xml dosyası '%s' ayrıştırması başarısız.\n"
 msgid "ERROR: no toplevel pipeline element in file '%s'.\n"
 msgstr "HATA: '%s' dosyasında üst seviye öğesi bulunamadı.\n"
 
-#, c-format
-msgid "WARNING: only one toplevel element is supported at this time."
+#, fuzzy
+msgid "WARNING: only one toplevel element is supported at this time.\n"
 msgstr "UYARI: Şu anda sadece bir tane üst seviye öğesi destekleniyor."
 
 #, c-format
@@ -866,26 +874,25 @@ msgstr ""
 msgid "WARNING: from element %s: %s\n"
 msgstr "HATA: %s öğesinden: %s\n"
 
-#, c-format
 msgid "Prerolled, waiting for buffering to finish...\n"
 msgstr ""
 
 msgid "buffering..."
 msgstr ""
 
-#, c-format
 msgid "Done buffering, setting pipeline to PLAYING ...\n"
 msgstr ""
 
-#, c-format
 msgid "Buffering, setting pipeline to PAUSED ...\n"
 msgstr ""
 
-#, c-format
 msgid "Redistribute latency...\n"
 msgstr ""
 
 #, c-format
+msgid "Setting state to %s as requested by %s...\n"
+msgstr ""
+
 msgid "Interrupt: Stopping pipeline ...\n"
 msgstr ""
 
@@ -894,6 +901,10 @@ msgstr "Çıktı etiketleri (metadata olarak da bilinir)"
 
 msgid "Output status information and property notifications"
 msgstr "Çıktı durum bilgisi ve özellik uyarıları"
+
+#, fuzzy
+msgid "Do not print any progress information"
+msgstr "TÜRÜN durum bilgisini gösterme"
 
 msgid "Output messages"
 msgstr ""
@@ -916,11 +927,13 @@ msgstr "Hatalı işleticiyi kurma"
 msgid "Print alloc trace (if enabled at compile time)"
 msgstr "'alloc' takibini yazdır (derleme sırasında etkinleştirilmişse)"
 
+msgid "Force EOS on sources before shutting the pipeline down"
+msgstr ""
+
 #, c-format
 msgid "ERROR: pipeline could not be constructed: %s.\n"
 msgstr "HATA: boruhattı oluşturulamadı: %s.\n"
 
-#, c-format
 msgid "ERROR: pipeline could not be constructed.\n"
 msgstr "HATA: boruhattı oluşturulamadı.\n"
 
@@ -928,55 +941,58 @@ msgstr "HATA: boruhattı oluşturulamadı.\n"
 msgid "WARNING: erroneous pipeline: %s\n"
 msgstr "UYARI: hatalı boruhattı: %s\n"
 
-#, c-format
 msgid "ERROR: the 'pipeline' element wasn't found.\n"
 msgstr "HATA: 'pipeline' öğesi bulunamadı.\n"
 
-#, c-format
 msgid "Setting pipeline to PAUSED ...\n"
 msgstr ""
 
-#, fuzzy, c-format
+#, fuzzy
 msgid "ERROR: Pipeline doesn't want to pause.\n"
 msgstr "HATA: boruhattı çalmak istemiyor.\n"
 
-#, c-format
 msgid "Pipeline is live and does not need PREROLL ...\n"
 msgstr ""
 
-#, c-format
 msgid "Pipeline is PREROLLING ...\n"
 msgstr ""
 
-#, fuzzy, c-format
+#, fuzzy
 msgid "ERROR: pipeline doesn't want to preroll.\n"
 msgstr "HATA: boruhattı çalmak istemiyor.\n"
 
-#, c-format
 msgid "Pipeline is PREROLLED ...\n"
 msgstr ""
 
-#, c-format
 msgid "Setting pipeline to PLAYING ...\n"
 msgstr ""
 
-#, c-format
 msgid "ERROR: pipeline doesn't want to play.\n"
 msgstr "HATA: boruhattı çalmak istemiyor.\n"
+
+msgid "EOS on shutdown enabled -- Forcing EOS on the pipeline\n"
+msgstr ""
+
+msgid "Waiting for EOS...\n"
+msgstr ""
+
+msgid "EOS received - stopping pipeline...\n"
+msgstr ""
+
+msgid "An error happened while waiting for EOS\n"
+msgstr ""
 
 msgid "Execution ended after %"
 msgstr "Çalıştırma % sonrası bitti"
 
-#, c-format
 msgid "Setting pipeline to READY ...\n"
 msgstr ""
 
-#, c-format
 msgid "Setting pipeline to NULL ...\n"
 msgstr ""
 
-#, fuzzy, c-format
-msgid "FREEING pipeline ...\n"
+#, fuzzy
+msgid "Freeing pipeline ...\n"
 msgstr "BORUHATTI çalıştırılıyor ...\n"
 
 #~ msgid "Disable accelerated CPU instructions"
